# httpx_qs

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.html  README.rst  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements_dev.txt  search.html  searchindex.js  tox.ini
.doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree
.doctrees/api/: httpx_qs.doctree  httpx_qs.enums.doctree  httpx_qs.enums.merge_policy.doctree  httpx_qs.transporters.doctree  httpx_qs.transporters.smart_query_strings.doctree  httpx_qs.utils.doctree  httpx_qs.utils.merge_query.doctree
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
_modules/: index.html
_modules/httpx_qs/enums/: merge_policy.html
_modules/httpx_qs/transporters/: smart_query_strings.html
_modules/httpx_qs/utils/: merge_query.html
_sources/: README.rst.txt  index.rst.txt  modules.rst.txt
_sources/api/: httpx_qs.enums.rst.txt  httpx_qs.rst.txt  httpx_qs.transporters.rst.txt  httpx_qs.transporters.smart_query_strings.rst.txt
api/: httpx_qs.enums.html  httpx_qs.enums.merge_policy.html  httpx_qs.html  httpx_qs.transporters.html  httpx_qs.transporters.smart_query_strings.html  httpx_qs.utils.html  httpx_qs.utils.merge_query.html
docs/: conf.py  index.rst
docs/api/: httpx_qs.enums.merge_policy.rst  httpx_qs.utils.merge_query.rst  httpx_qs.utils.rst
src/httpx_qs/: __init__.py
src/httpx_qs/enums/: merge_policy.py
src/httpx_qs/transporters/: smart_query_strings.py
src/httpx_qs/utils/: merge_query.py
tests/unit/: test_merge_query.py  test_transport.py
